// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header Component > should render the Header component correctly 1`] = `
<div>
  <div>
    <button
      data-testid="connect-test-button"
    />
  </div>
  <div
    align="start"
    class="sc-blHHSb jWUilC"
    position="left"
    spacing="0"
    style="width: 100vw;"
  >
    <header
      class="sc-bKXUjo dsbqug"
    >
      <img
        class="sc-edsqmr igzWAP"
        src="/src/assets/icons/logo-dark.svg"
      />
    </header>
    <nav
      class="sc-kJZLhT hBQMmf"
    >
      <a
        class="sc-lgprfV HPWPB"
        href="/dashboard"
      >
        Dashboard
      </a>
      <a
        class="sc-lgprfV HPWPB"
        href="/exchange"
      >
        Exchange
      </a>
      <a
        class="sc-lgprfV HPWPB"
        href="/dashboard/faucet"
      >
        Faucet
      </a>
      <a
        class="sc-lgprfV HPWPB"
        href="https://station.non-prod.sphx.dev"
        target="_blank"
      >
        Station
      </a>
      <a
        class="sc-lgprfV HPWPB"
        href="https://explorer.sphx.dev"
        target="_blank"
      >
        Explorer
      </a>
      <button
        class="sc-fAUdSK iHBsqq"
        variant="secondary"
      >
        Add Chain
      </button>
      <span
        class="sc-dntaoT hkozYz"
      >
        <button
          class="sc-fAUdSK gxMJIT"
          variant="primary"
        >
          Connect
        </button>
      </span>
    </nav>
  </div>
  <div
    id="modal-root"
  />
</div>
`;

exports[`Header Component > should render the Nav component 1`] = `
<nav
  class="sc-kJZLhT hBQMmf"
>
  <a
    class="sc-lgprfV HPWPB"
    href="/dashboard"
  >
    Dashboard
  </a>
  <a
    class="sc-lgprfV HPWPB"
    href="/exchange"
  >
    Exchange
  </a>
  <a
    class="sc-lgprfV HPWPB"
    href="/dashboard/faucet"
  >
    Faucet
  </a>
  <a
    class="sc-lgprfV HPWPB"
    href="https://station.non-prod.sphx.dev"
    target="_blank"
  >
    Station
  </a>
  <a
    class="sc-lgprfV HPWPB"
    href="https://explorer.sphx.dev"
    target="_blank"
  >
    Explorer
  </a>
  <button
    class="sc-fAUdSK iHBsqq"
    variant="secondary"
  >
    Add Chain
  </button>
  <span
    class="sc-dntaoT hkozYz"
  >
    <button
      class="sc-fAUdSK gxMJIT"
      variant="primary"
    >
      Connect
    </button>
  </span>
</nav>
`;
